== Change Log

=== Edge
* Make script/extension more friendly, adding help and info commands. [Sean Cribbs]
* Added more render regions to layout, snippet, user, and extension views. [Sean Cribbs]
* Fixed the radiant:update:scripts to find the proper directory [Jim Gay]
* Factor out dev? functionality in StandardTags, allowing other tags to access
it. [Sean Cribbs]

=== 0.6.9 Etch
* Make <r:random> accept dynamically generated options. [Jim Gay, Sean Cribbs]
* Correctly set default 'inherit' to false on <r:unless_content> [Mark A. Yoon]
* Correct authenticity token errors when using cookie session store [Sean 
Cribbs]
* Make script/extension executable. [Sean Cribbs]
* Correct bugs in radiant:freeze:edge task. [Sean Cribbs]
* Fix strange Page subclass loading errors in development mode. [Sean Cribbs]
* Fix typo in if_content description. [Jim Gay]
* Correct error in radiant:update:configs task. [Sean Cribbs]

=== 0.6.8 Incise
* Hide page publish date selector unless page.edit.published_date? config is 
set. [Sean Cribbs]
* Add <r:yield /> tag to support snippets that accept blocks. [Andrew Neil]
* Fix bug with FileNotFoundPage subclasses and draft status. [Glenn Murray]
* Update radiant:freeze:edge task to support BRANCH, TAG, and REVISION. [John 
Muhl]
* Update to Haml 2.0.1. [Jim Gay]
* Fix radiant:update:configs task to properly evaluate environment.rb
[Sean Cribbs]
* Fix page subclass loading issues. [Sean Cribbs]
* Add <r:unless_ancestor_or_self> and <r:unless_self> tags. [Tim Gossett]
* Add specific installation modes for gzip and bzip2 compression. [Sean Cribbs]
* Added extension installation scripts. [Sean Cribbs]
* Added find attr to r:if_content and r:unless_content to expand based on
finding 'any' or 'all' specified parts [Jim Gay]
* Added inherit attr to r:if_content and r:unless_content to search for parts
independently in the page tree. [Jim Gay]
* Update radiant:freeze:edge task to use git and GitHub. [John Muhl]