@@ -385,44 +385,136 @@ describe "Standard Tags" do
       page(:no_user).should render('<r:author />').as('')
     end
     
-  end
-  
-  describe "<r:authors>" do
-    it "should render it's contents"
-    it "should collect a group of authors"
-    it "should allow a login attribute to limit the group of authors to the given login"
-    it "should allow a comma delimited list of logins to limit the group of authors"
-  end
-  
-  describe "<r:authors:each>" do
-    it "should render it's contents for each author"
-  end
-  
-  [:name, :email].each do |attr|
-    describe "<r:authors:each:#{attr}>" do
-      it "should render the '#{attr}' attribute of the current author" do
-        pending "not implemented"
-        value = author.send(attr)
-        page.should render("<r:authors:each:#{attr} />").as(value.to_s)
-      end
+    it "should render its contents when used as a double tag" do
+      page.should render('<r:author>true</r:author>').as('true')
     end
   end
   
-  describe "<r:authors:each:pages>" do
-    it "should render the contents"
-    it "should order the author's pages by the given order attribute"
-    it "should limit the author's pages to 10"
-    it "should limit the author's pages to the given limit attribute"
-    it "should find the author's pages as children of the page in the given scope attribute"
+  describe "<r:author:name>" do
+    it "should render the name of the current author" do
+      page.should render('<r:author:name />').as('Admin')
+    end
   end
   
-  describe "<r:authors:each:pages:each>" do
-    it "should render it's contents for each of the current author's pages."
-    it "should set the scope for the current page"
+  describe "<r:author:email>" do
+    it "should render the email of the current author" do
+      page.should render('<r:author:email />').as('admin@example.com')
+    end
+  end
+  
+  describe "<r:author:notes>" do
+    it "should render the notes of the current author" do
+      page.should render('<r:author:notes />').as('admin note')
+    end
+  end
+  
+  describe "<r:authors>" do
+    it "should render it's contents" do
+      page.should render('<r:authors>Authors</r:authors>').as('Authors')
+    end
+  end
+  
+  describe "<r:authors:each>" do
+    it "should render it's contents for each author" do
+      page.should render('<r:authors:each>author </r:authors:each>').as('author author author author author ')
+    end
+    
+    it "should allow a login attribute to limit the group of authors to the given login" do
+      page.should render('<r:authors:each login="admin">author </r:authors:each>').as('author ')
+    end
+    
+    it "should return no authors when given a non-existant login for the login attribute" do
+      page.should render('<r:authors:each login="none">author </r:authors:each>').as('')
+    end
+    
+    it "should allow a comma delimited list of logins to limit the group of authors" do
+      page.should render('<r:authors:each login="admin, another">author </r:authors:each>').as('author author ')
+    end
+    
+    it "should allow a limit attribute to limit the collection" do
+      page.should render('<r:authors:each limit="3">author </r:authors:each>').as('author author author ')
+    end
+    
+    it "should allow a offset attribute to offset the collection" do
+      page.should render('<r:authors:each limit="2" offset="3">author </r:authors:each>').as('author author ')
+    end
+
+    it 'should error with a "limit" attribute that is not a positive number between 1 and 4 digits' do
+      message = "`limit' attribute of `each' tag must be a positive number between 1 and 4 digits"
+      page.should render('<r:authors:each limit="-10"></r:authors:each>').with_error(message)
+    end
+
+    it 'should error with a "offset" attribute that is not a positive number between 1 and 4 digits' do
+      message = "`offset' attribute of `each' tag must be a positive number between 1 and 4 digits"
+      page.should render('<r:authors:each offset="a"></r:authors:each>').with_error(message)
+    end
+  end
+  
+  describe "<r:authors:each:name>" do
+    it "should render the name of the current author" do
+      page.should render("<r:authors:each><r:name /> </r:authors:each>").as('Admin Another Developer Existing Non-admin ')
+    end
+  end
+  
+  describe "<r:authors:each:email>" do
+    it "should render the email of the current author" do
+      page.should render("<r:authors:each><r:email /> </r:authors:each>").as('admin@example.com another@example.com developer@example.com existing@example.com non_admin@example.com ')
+    end
+    
+    it "should render nothing if the current author has no email" do
+      users(:admin).update_attribute(:email, nil)
+      page.should render('<r:authors:each login="admin"><r:email /></r:authors:each>').as('')
+    end
+  end
+  
+  describe "<r:pages>" do
+    it "should render the contents if there is a current author" do
+      page.created_by = users(:admin)
+      page.should render('<r:pages>true</r:pages>').as('true')
+    end
+    it "should not render the contents if there is no current author" do
+      page.created_by = nil
+      page.should render('<r:pages>true</r:pages>').as('')
+    end
+  end
+  
+  describe "<r:pages:each>" do
+    it "should render it's contents sorting the author's pages by the given by attribute" do
+      page.should render('<r:pages:each limit="5" by="slug"><r:slug /> </r:pages:each>').as('/ a another article article-2 ')
+    end
+    
+    it "should render it's contents for each of the author's visible pages" do
+      page_marks = 'x' * page.created_by.pages.find(:all, :conditions => {:status_id => 100, :virtual => false}).size
+      page.should render('<r:pages:each>x</r:pages:each>').as(page_marks)
+    end
+    
+    it "should render it's contents limiting the author's pages to the given limit attribute" do
+      page.should render('<r:pages:each limit="3"><r:title /> </r:pages:each>').as('Article Article 2 Article 3 ')
+    end
+    
+    it "should offset the pages when given limit and offset attributes between 1 and 4 digits" do
+      page.should render('<r:pages:each limit="3" offset="1"><r:title /> </r:pages:each>').as('Article 2 Article 3 Article 4 ')
+    end
+
+    it 'should error with a "limit" attribute that is not a positive number between 1 and 4 digits' do
+      message = "`limit' attribute of `each' tag must be a positive number between 1 and 4 digits"
+      page.should render('<r:pages:each limit="-10"></r:pages:each>').with_error(message)
+    end
+
+    it 'should error with a "offset" attribute that is not a positive number between 1 and 4 digits' do
+      message = "`offset' attribute of `each' tag must be a positive number between 1 and 4 digits"
+      page.should render('<r:pages:each offset="a"></r:pages:each>').with_error(message)
+    end
+    
+    it "should find the author's pages as children of the page url in the given url attribute" do
+      page.should render('<r:pages:each url="/parent"><r:title /> </r:pages:each>').as('Child Child 2 Child 3 ')
+    end
   end
 
-  describe "<r:authors:pages:count>" do
-    it "should render the number of pages for the current author"
+  describe "<r:pages:count>" do
+    it "should render the number of visible pages for the current author" do
+      page.should render('<r:authors:each login="admin"><r:pages:count /></r:authors:each>').as('31')
+    end
   end
 
   describe "<r:date>" do
